--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
 
-                <h3 for="birthday">Birthday:</h3>
+                <label for="birthday"><h3>Birthday:</h3></label>
                 <input type="date" id="birthday" name="birthday" required/>
 
                 <h3 for="address">Address:</h3>
@@ -97,7 +97,7 @@
             </div>
     </div>
 <footer>
-    <p><i>For any inquiries or concerns, kindly message our <a href="https://www.facebook.com/DLSU.Dasmarinas" target="_blank">Facebook Page</a></i></p>
+    <p><i>For any inquiries or concerns, kindly message our <a rel="noopener" href="https://www.facebook.com/DLSU.Dasmarinas" target="_blank">Facebook Page</a></i></p>
 </footer>
 
 <script>
